--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 server:
+  port: 8080
+  error:
+    include-message: always
   servlet:
     encoding:
       charset: UTF-8
@@ -17,6 +20,19 @@ spring:
       max-lifetime: 60000
       maximum-pool-size: 10
       minimum-idle: 5
-    password: mrd123456
+    password: root
     url: jdbc:mysql://localhost:3306/pt
     username: root
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
+rsa:
+  private-key: classpath:certs/private_key_pkcs8.pem
+  public-key: classpath:certs/public_key.pem
